@@ -20,6 +20,7 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* fix encryption level handle invalid values
 	* add a number of missing functions to the python binding
 	* fix typo in Jamfile for building shared libraries
 	* prevent tracker exchange for magnet links before metadata is received
